[package]
name = "meilis3arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.7.1" }
thiserror = "1.0.48"
rusty-s3 = "0.4.1"
url = "2.4.1"
log = "0.4.20"
serde-xml-rs = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
http = "0.2.9"
quick-xml = { version = "0.27.1", features = ["serialize"] }

[dev-dependencies]
testcontainers = "0.14.0"
