[package]
name = "strois"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["cli"]

[dependencies]
ureq = { version = "2.7.1" }
thiserror = "1.0.48"
rusty-s3 = { git = "https://github.com/paolobarbolini/rusty-s3", rev = "0b60b9d"}
url = "2.4.1"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
http = "0.2.9"
quick-xml = { version = "0.30.0", features = ["serialize", "serde-types", "serde"] }

[dev-dependencies]
insta = "1.32.0"
uuid = { version = "1.4.1", features = ["v4"] }

[features]
default = ["json"]
json = ["ureq/json"]
