[package]
authors = ["Tamo <tamo@meilisearch.com", "kero <kero@meilisearch.com>"]
description = "S3 synchronous SDK based on rusty_s3 and ureq"
edition = "2021"
keywords = ["meilisearch", "s3", "sdk", "sync"]
categories = ["web-programming::http-client"]
license = "MIT"
name = "strois"
readme = "README.md"
repository = "https://github.com/meilisearch/strois"
version = "0.0.1"

[workspace]
members = ["cli"]

[dependencies]
ureq = { version = "2.7.1" }
thiserror = "1.0.48"
rusty-s3 = "0.5.0"
url = "2.4.1"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
http = "0.2.9"
quick-xml = { version = "0.30.0", features = ["serialize", "serde-types", "serde"] }

[dev-dependencies]
insta = "1.32.0"
uuid = { version = "1.4.1", features = ["v4"] }

[features]
default = ["json"]
json = ["ureq/json"]
