[package]
authors = ["Tamo <tamo@meilisearch.com", "kero <kero@meilisearch.com>"]
description = "S3 synchronous SDK based on rusty_s3 and ureq."
edition = "2021"
keywords = ["meilisearch", "s3", "sdk", "sync"]
license = "MIT"
name = "strois-cli"
readme = "README.md"
repository = "https://github.com/meilisearch/strois"
version = "0.1.0"

default-run = "strois"

[[bin]]
name = "strois"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.2"
atty = "0.2.14"
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
env_logger = "0.10.0"
log = "0.4.20"
miette = { version = "5.10.0", features = ["fancy", "owo-colors"] }
strois = { path = "../", version = "0.0.3" }
